app/src/main/java/com/example/dudu/data/remote/errors/NetworkException.kt
package com.example.dudu.data.remote.errors

class NetworkException : Exception()